--- a/lib/oo-hsl-picker.jade
+++ b/lib/oo-hsl-picker.jade
@@ -28,12 +28,7 @@ template(name="ooColorPicker")
         input.js-updateLightness.js-enableDrag.ooSlide(type="range" min="0" max="100" value=lightness step="1" $dyn = lightnessGradient)
       .colorSliderWrapper
         input.js-updateAlpha.js-enableDrag.ooSlide(type="range" min="0" max="100" value=alphaPercent step="1" $dyn = alphaGradient)
-    .header-section()
-      h4 History
-      button.js-setHistoryAction(btn="tiny neutral-dim" data-action="addToFavorites") Add To Favorites
-      button.js-setHistoryAction(btn="tiny neutral-dim" data-action="select") Select
-    each historyColors
-      +ooColorSwatch classList="js-setHistoryColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
+    +ooColorPicker_History
     .header-section()
       h4 Favorites
     each favoriteColors
@@ -46,26 +41,24 @@ template(name="ooColorPicker")
       button.js-setRandomAction(btn="tiny neutral-dim" data-action="select") Select
     each randomColors
       +ooColorSwatch classList="js-setRandomColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
-    //- .header-section
-    //-   h4 Schemes
-    //-   button.js-setSchemeAction(btn="tiny neutral-dim" data-action="addToFavorites") Add To Favorites
-    //-   button.js-setSchemeAction(btn="tiny neutral-dim" data-action="select") Select
-    //- h5.scheme-title Analagous
-    //- each schemeAnalagous
-    //-   +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
-    //- h5.scheme-title Complements
-    //- each schemeComplements
-    //-   +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
-    //- h5.scheme-title Split Complements
-    //- each schemeSplitComplements
-    //-   +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
-    //- h5.scheme-title Triadic
-    //- each schemeTriadic
-    //-   +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
-    //- h5.scheme-title Tetradic
-    //- each schemeTetradic
-    //-   +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
-    //- h5.scheme-title Monochromatic
-    //- each schemeMonochromatic
-    //-   +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
+    +ooColorPicker_Schemes
+
+template(name="ooColorPicker_History")
+  .header-section()
+    h4 History
+    button.js-setHistoryAction(btn="tiny neutral-dim" data-action="addToFavorites") Add To Favorites
+    button.js-setHistoryAction(btn="tiny neutral-dim" data-action="select") Select
+  each historyColors
+    +ooColorSwatch classList="js-setHistoryColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
+
+template(name="ooColorPicker_Schemes")
+  .header-section
+    h4 Schemes
+    button.js-setSchemeAction(btn="tiny neutral-dim" data-action="addToFavorites") Add To Favorites
+    button.js-setSchemeAction(btn="tiny neutral-dim" data-action="select") Select
+  each colorSchemes
+    h5.scheme-title {{this}}
+    each schemeSwatches
+      +ooColorSwatch classList="js-setSchemeColor" oo="push small" color=color isActive=isSelectedColor showStarBadge=isFavoritedColor
+
 
